tests/rosetta/out/Java/calculating-the-value-of-e.error
javac: exit status 1
/tmp/CalculatingTheValueOfE.java:23: error: incompatible types: double cannot be converted to String
        Object n = (Integer.parseInt(scaled));
                                     ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
1 error
